--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,12 @@
 .imageTitle {
   margin-bottom: 15px;
 }
+
+.plus {
+  position: absolute;
+  top: -10px;
+  right: 22px;
+  font-size: 36px;
+  color: white;
+  cursor: pointer;
+}
