--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   background: #f6f6f6;
+  font-family: 'Raleway', sans-serif;
 }
 
 .App-logo {
@@ -41,16 +42,24 @@
 
 .top {
   height: 500px;
-  background: black;
+  background-image: url("./img/fond.jpg");
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin:0;
+  padding:0;
   margin-bottom: 50px;
 }
 
 .title {
   color: white;
   text-align: center;
+  font-weight: 700;
   width: 100%;
   margin: auto;
-  font-size: 40px;
+  font-size: 56px;
 }
 
 /* Images */
@@ -73,7 +82,62 @@
   cursor: pointer;
 }
 
+.delete {
+  position: absolute;
+  top: -5px;
+  right: 22px;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+}
+
 /* Pagination */
 .pagin{
   margin: auto auto 15px auto !important;
+}
+
+.selectP:hover{
+  cursor: pointer;
+  color: blue;
+}
+
+/* Panier */
+.btn-circle.btn-xl {
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  border-radius: 35px;
+  font-size: 24px;
+  line-height: 1.33;
+}
+
+.btn-circle {
+  width: 30px;
+  height: 30px;
+  padding: 6px 0px;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.42857;
+}
+
+.squarePanier{
+  height: 25px;
+  width: 25px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+.squarePanier:hover {
+  color: #4e4b4b;
+  cursor: pointer;
+}
+
+.overflowList {
+  overflow-y: auto;
+  overflow-x: hidden;
+  max-height: 400px;
+  min-height: 35px;
+  width: 274px;
 }
