--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@
   top: -7px;
   right: -10px;
   z-index: 10;
-  color: rgba(255, 7, 7, 0.7);
+  color: white;
   height: 20px;
   width: 20px;
   background-color: black;
