--- a/src/App.css
+++ b/src/App.css
@@ -162,3 +162,14 @@
   text-align: center;
   font-size: 20px;
 }
+
+/* CommanderModal */
+
+.boxStatus{
+  margin: 15px;
+}
+
+.buttonPayer {
+  text-align: center;
+  margin: 15px;
+}
