Modify Panier + Add new pagePanier

--- a/src/App.css
+++ b/src/App.css
@@ -163,6 +163,12 @@
   font-size: 20px;
 }
 
+.disclaimerAlma{
+  text-align: center;
+  font-weight: 511;
+  margin-bottom: 15px;
+}
+
 /* CommanderModal */
 
 .boxStatus{
