--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,36 @@
   margin-bottom: 50px;
 }
 
+.contentPanier { 
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  background: white;
+}
+
+.padPanier {
+	padding: 0px 30px 0px 60px !important;
+}
+
+.h100{
+  height: 100px;
+  width: unset !important;
+}
+
+.top2 {
+  height: 300px;
+  background-image: url("./img/fond.jpg");
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin:0;
+  padding:0;
+  margin-bottom: 50px;
+}
+
 .title {
   color: white;
   text-align: center;
@@ -178,4 +208,18 @@
 .buttonPayer {
   text-align: center;
   margin: 15px;
+}
+
+/* Validation */ 
+.containerValidation {
+	width: 500px;
+	margin: auto;
+  margin-top: 10%;
+  text-align: center;
+  padding: 15px;
+  background: #dfd;
+}
+
+.paiementTitle {
+  font-size: 44px;
 }
